Revision history for Gimp-Perl extension.

	- added new convinience functions to Gimp::Util.
        - Gimp::Fu checks for the presence of Gtk and dies
          if it can't be found.
        - Uh, ah, debugging code in the repository, again!
        - PF_FONT should now display a string widget in gtk+ 1.0.
        - PixelRgn/Tile data sould now be accessible again.
        - updated PDB.
        - extensive tests is now always on.
        - added examples/gimpmagick.
        - closed big, BIG security hole on password authenticitation
          (basically one could do anything includung killing your
          system without authorization. argh). This required a
          protocol change, so old clients are unable to connect using
          password-authenticitation.
        - new function Gimp::initialized that returns true whenever its
          safe to call gimp functins.
        - added the Gimp::Feature module, allowing for easy feature checks.
          See examples/gimpmagick or examples/parasite-editor for example
          usage.
        - added perlcc, the perl control center. Only displays log messages
          at the moment.
        - Data::Dumper is now longer required to run the scripts, some
          buttons and RUN_WITH_LAST_VALS won't work, though.
        - removed POSIX dependency in examples/gimpmagick.

1.06  Sat Mar  6 19:36:12 CET 1999
	- Gimp::Fu does no longer display the returned image when it
          is the same as the one passed in.
        - append imagenumber to "Untitled"-images in widget.
        - removed publicly-visible non-PDB pixelfunctions.
          "uuuuuse peedee-ell or dieieie".
        - implemented Gimp::Fu::PF_RADIO.
        - added blowinout.pl, terral_text and xachvision.pl.
        - the use of Gimp::PDL to access the region/tile functions is
          now mandatory. The old string interface does not exist anymore.
        - the path to the server-socket now includes the UID, to avoid